@@ -120,10 +120,18 @@ function(add_external_plugin vcs url tag)
         endif()
     endif()
 
-    set(_packages ${path})
+    set(ignore_root FALSE)
     foreach(_subpath ${ARGN})
-        set(_packages ${_packages} "${path}/${_subpath}")
+        if ("${_subpath}" STREQUAL "__ignore_root")
+            set(ignore_root TRUE)
+        else()
+            set(_packages ${_packages} "${path}/${_subpath}")
+        endif()
     endforeach()
+
+    if (NOT ${ignore_root})
+        set(_packages ${path})
+    endif()
     set(PLUGIN_LOADER ${PLUGIN_LOADER} ${_packages} PARENT_SCOPE)
 endfunction(add_external_plugin)
 
