@@ -41,6 +41,10 @@ Bug Handling
 Features
 --------
 
+* Added support for '__ignore_root' tag in add_external_plugin to allow
+  external packages to be added which do not have any .go files
+  in their root directory. (issue #955).
+
 * Switched from using goprotobuf to gogoprotobuf with marshal_all and
   unmarshal_all extensions for significant performance increase.
 
